--- a/blocks/body/header/header.css
+++ b/blocks/body/header/header.css
@@ -63,3 +63,16 @@ header
 
     fill: rgba(219, 219, 219, .71);
 }
+
+#mybtn{
+  margin: 15% 0;
+  float: right;
+  background: url("../../../img/bell.png") no-repeat center;
+  background-size: auto;
+  padding: 50px;
+  border: transparent;    
+}
+#mybtn:active, 
+#mybtn:focus {
+    outline: none;
+}
