--- a/blocks/body/footer/footer.css
+++ b/blocks/body/footer/footer.css
@@ -60,16 +60,17 @@ footer h3
 }
 
 #scrollup {
-position: fixed; /* фиксированная позиция */
-opacity: 0.8; /* прозрачность */
+position: fixed; 
+opacity: 0.7; 
 background: #b2dfdb;
-border-radius: 5px; /* скругление углов */
+border-radius: 5px;
 -webkit-border-radius: 5px;
 -moz-border-radius: 5px;
-right: 2%; /* отступ слева */
-bottom: 2%; /* отступ снизу */
-display: none; /* спрятать блок */
+right: 0; 
+bottom: 5%; 
+display: none; 
 cursor: pointer;
 float: right;
-padding: 1%;
+padding: 0;
+
 }
