--- a/css/smoothDivScroll.css
+++ b/css/smoothDivScroll.css
@@ -1,21 +1,17 @@
-﻿/* You can alter this CSS in order to give Smooth Div Scroll your own look'n'feel */
+﻿
 
 /* Invisible left hotspot */
 div.scrollingHotSpotLeft
 {
-	/* The hotspots have a minimum width of 100 pixels and if there is room the will grow
-    and occupy 15% of the scrollable area (30% combined). Adjust it to your own taste. */
 	min-width: 75px;
 	width: 10%;
 	height: 100%;
-	/* There is a big background image and it's used to solve some problems I experienced
-    in Internet Explorer 6. */
 	background-image: url(../images/big_transparent.gif);
 	background-repeat: repeat;
 	background-position: center center;
 	position: absolute;
 	z-index: 200;
-	left: 0;
+	left: 10%;
 	/*  The first url is for Firefox and other browsers, the second is for Internet Explorer */
 	cursor: url(../images/cursors/cursor_arrow_left.png), url(../images/cursors/cursor_arrow_left.cur),w-resize;
 }
@@ -29,7 +25,7 @@ div.scrollingHotSpotLeftVisible
 	opacity: 0.35; /* Standard CSS3 opacity setting */
 	-moz-opacity: 0.35; /* Opacity for really old versions of Mozilla Firefox (0.9 or older) */
 	filter: alpha(opacity = 35); /* Opacity for Internet Explorer. */
-	zoom: 1; /* Trigger "hasLayout" in Internet Explorer 6 or older versions */
+	
 }
 
 /* Invisible right hotspot */
@@ -43,7 +39,7 @@ div.scrollingHotSpotRight
 	background-position: center center;
 	position: absolute;
 	z-index: 200;
-	right: 0;
+	right: 10%;
 	cursor: url(../images/cursors/cursor_arrow_right.png), url(../images/cursors/cursor_arrow_right.cur),e-resize;
 }
 
@@ -56,7 +52,7 @@ div.scrollingHotSpotRightVisible
 	opacity: 0.35;
 	filter: alpha(opacity = 35);
 	-moz-opacity: 0.35;
-	zoom: 1;
+	
 }
 
 /* The scroll wrapper is always the same width and height as the containing element (div).
@@ -67,12 +63,14 @@ div.scrollWrapper
 	position: relative;
 	overflow: hidden;
 	width: 100%;
+	margin: auto;
 	height: 100%;
 }
 
 div.scrollableArea
 {
 	position: relative;
-	width: auto;
+	width: 100%;
+	margin: auto;
 	height: 100%;
 }
