--- a/blocks/media.css
+++ b/blocks/media.css
@@ -37,7 +37,7 @@
     {
         height: 466px;
 
-        background-color: #ffc107;
+        background-image: url(img/ann.ipg); 
     }
 
     .form-control
@@ -61,4 +61,24 @@
     .section-text {
         font-size: 17px;
     }
+    .section__video{
+        height: 466px;
+
+        background-image: url(../img/goit.jpg) !important; 
+    }
+    .video__case
+{
+    position: absolute;
+    z-index: 100;
+    top: 0;
+    left: 0;
+
+    overflow: visible;
+
+    width: 100%;
+    height: 866px;
+
+    text-align: center;
+    background-image: url(img/ann.ipg); 
+}
 }
